# sddp-lab-manager

./: .gitignore  README.md  edit_config.json  edit_config.json.example  main.py  postprocess_config.json  postprocess_config.json.example  pyproject.toml  requirements.txt  run_config.json  run_config.json.example  setup.py
app/: app.py
app/handlers/: case_running.py  deck_editing.py  result_processing.py
app/utils/: log.py  terminal.py
assets/: default_sddp.jl  dual.jl  dual_policy_inner_sim.jl  dualsddp_dual_policy_inner_sim.jl  dualsddp_philpott_policy_inner_sim.jl  dualsddp_reagan_policy_inner_sim.jl  philpott.jl  reagan.jl  reagan_policy_inner_sim.jl  sddp_policy_inner_sim.jl  sddpjl_sddp_policy_inner_sim.jl  sddpjl_sddp_policy_outer_sim.jl  upper_simulation.jl
data-1dtoy-scaled/: main.jsonc
data-1dtoy-scaled/data/: constraints.jsonc  inflow_scenarios.jsonc  lines.csv  load.csv  scenarios.jsonc  system.jsonc  tasks.jsonc  thermals.csv  thermals_with_inflex.csv
data-1dtoy-scaled_ar/data/: algorithm.jsonc  buses.csv  hydros.csv  inflow_scenarios.jsonc  scenarios.jsonc  stages.csv  tasks.jsonc
data-1dtoy/data/: buses.csv  hydro_generation_bounds.csv  hydros.csv  inflow_scenarios.jsonc  lines.csv  load.csv  resources.jsonc  scenarios.jsonc  stages.csv  system.jsonc  tasks.jsonc  thermals.csv
data-4ree/: main.jsonc
data-4ree/data/: buses.csv  hydros.csv  inflow_scenarios.jsonc  lines.csv  load.csv  resources.jsonc  scenarios.jsonc  stages.csv  system.jsonc  tasks.jsonc  thermals.csv  thermals_with_inflex.csv
deck/data/: algorithm.jsonc  buses.csv  (+10 more)
