[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sddp-lab-manager"
dynamic = ["version"]
dependencies = [
    "click>=8.1.7",
    "polars>=1.15.0",
    "pyjson5>=1.6.7",
    "python-dateutil>=2.9.0.post0",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "sddp-lab-manager"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/rjmalves/sddp-lab-manager/"

[project.scripts]
sddp-lab-manager = "main:main"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "app/",
]

[tool.ruff]
line-length = 80
